# sphinx_singledispatch

./: .gitignore  README.md  setup.cfg
.github/workflows/: push.yaml
docs/: api.md  conf.py  index.md
sphinx_singledispatch/: main.py
