[metadata]
name = sphinx_singledispatch
description = Illustration of sphinx singledispatch + autodoc_mock_imports issue.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rozsasarpi/sphinx_singledispatch
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    numpy<2
    xarray<2022.3.0

[options.extras_require]
docs =
    matplotlib<4
    sphinx >=3, <5
    myst-parser<1
